# odoo_packge_template

./: MANIFEST.in  README.md  definitions.py  install.py  installer.py  odoo_food_devices.py  odoo_food_devices.service  pyproject.toml  read_config.py  setup.cfg  setup.md  setup.py
old/: odoo_food_devices.conf
src/: __init__.py  definitions.py  logger.py  odoo_food_devices.py  odoo_package_template.py  utils.py
test/: test.py
